Fix for IE footer bar overlap.
git-svn-id: http://svn.dojotoolkit.org/src@4151 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/documents/web0.3/css/index.css
+++ b/trunk/documents/web0.3/css/index.css
@@ -53,16 +53,21 @@
 	min-height:450px;
 	/*background: url("../img/summerStripe.gif") top left repeat-x; */
 	padding-top:9px; 
+	overflow:visible;
 }
 
 * html #body{
+	padding:0;
 	height:100%;
-	overflow:visible;
 }
 #content {
 	width:auto;	/* stretch to fill */
 	margin:10px 400px 50px 50px;
 	min-height: 350px;
+}
+* html #content {
+	height:450px;
+	overflow:visible;
 }
 
 #content #actionTabs {
